--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,8 +8,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    
-    <title>React App</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500&display=swap" rel="stylesheet">
+    <title>Reality</title>
   </head>
   <body>
     <div id="root"></div>
