--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,8 +10,8 @@
     rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
   </link>
-
-  <title>Reality</title>
+  <link rel="icon" href="%PUBLIC_URL%/col4.png">
+  <title>Realify</title>
 </head>
 
 <body>
